# risky

./: .gitignore  Cargo.toml  build.rs  flake.nix  qemu.dtb  qemu.dts  rust-toolchain.toml
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 20cgsn80c8jq4lwial6ry4spgwhzk8fv-source  d9gbq853jvbccrz5g3y0irbwgc57w137-source  p4h8czwwz81kw03cynm8j8skmh42sjs1-source  vmnfdy4159xm8l7hklahddd21807s0aw-source
lib/opensbi/: Cargo.toml
lib/opensbi/src/: call.rs  dbcn.rs  hsm.rs  lib.rs  time.rs
src/: linker.ld  logger.rs  main.rs  panic.rs  print.rs  uart.rs
src/allocator/: bump.rs  fixed_sized_block.rs  lock.rs  mod.rs
src/arch/: mod.rs
src/arch/rv64/: consts.rs  entry.rs  linker.ld  logger.rs  mod.rs
src/arch/rv64/asm/: boot.S  memory.S  mod.rs
src/arch/rv64/interrupt/: mod.rs
src/arch/rv64/macros/: mod.rs  print.rs
src/arch/rv64/memory/: alloc_list.rs  kernel_allocator.rs  mod.rs  page.rs  page_allocator.rs
src/arch/rv64/paging/: mod.rs
src/arch/rv64/paging_sv39/: entry.rs  mapping.rs  mod.rs  table.rs
src/arch/rv64/paging_sv57/: table.rs
src/arch/rv64/trap/: frame.rs  handler.rs  mod.rs
src/asm/: boot.S  boot.s  trap.s
src/sbi/: call.rs  dbcn.rs  hsm.rs  mod.rs
src/task/: mod.rs  simple_executor.rs
