[workspace]
members = [
    "lib/opensbi"
]

[package]
name = "risky"
version = "0.1.0"
edition = "2021"
authors = [
    "Finn Linck Ryan <finnliry@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opensbi = { path = "lib/opensbi" }
spin = "0.9.8"
log = "0.4.22"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
default = []
allocator_bump = []
allocator_fixed_size_block = ["allocator_bump"]